--- a/variables.env
+++ b/variables.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://jairo:159@cluster0.iajyo.mongodb.net/myFirstDatabase
+DB_MONGO=mongodb://jairo:159@cluster0-shard-00-00.iajyo.mongodb.net:27017,cluster0-shard-00-01.iajyo.mongodb.net:27017,cluster0-shard-00-02.iajyo.mongodb.net:27017/myFirstDatabase?ssl=true&replicaSet=atlas-1l4x94-shard-0&authSource=admin&retryWrites=true&w=majority
