--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MEAN API",
   "main": "index.js",
   "scripts": {
+    "start": "node /index.js",
     "dev": "nodemon ."
   },
   "author": "jairo",
